[project]
name = "genesis_devtools"
description = "Tools to manager life cycle of Genesis projects."
readme = "README.md"
authors = [{name = "Genesis Corporation", email = "anton.kremenetsky@gmail.com"}]
dynamic = ["version"]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.7,<9.0.0",  # BSD-3
    "rich>=13.3.3,<14.0.0",  # MIT License (MIT)
    "rich-click>=1.9.7,<2.0.0", # MIT License (MIT)
    "pyyaml>=6.0.0,<7.0.0",  # MIT
    "GitPython>=3.1.30,<4.0.0",
    "bazooka>=1.0.0,<2.0.0",  # Apache-2.0
    "cryptography>=45.0.5,<47.0.0",  # BSD-3
    "boto3>=1.37.0,<2.0.0",  # Apache-2.0
    "Jinja2>=3.1.5,<4.0.0",  # BSD License (BSD-3-Clause)
    "packaging==26.0",  # Apache-2.0 or BSD
    "simple-term-menu>=1.6.6,<2.0.0",  # MIT License (MIT)
    "certifi>=2026.2.25",  # modified version of ca-bundle.crt
#    "openapi-schema-validator>=0.8.1",  # BSD-3  #
    "orjson>=3.10.0,<4.0.0",  # MIT
]
[project.urls]
homepage = "https://github.com/infraguys/genesis_devtools/"

[build-system]
requires = [
    "setuptools>=75.3.3",  # last version for python3.8
    "setuptools_scm>=8",
    "GitPython>=3.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "tox>=4.0.0",
    "tox-uv",
    "pytest>=7.0.0",
]
test = [
    "coverage>=4.0",
    "mock>=3.0.5,<4.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-timer>=1.0.0,<2.0.0",  # MIT License (MIT)
    "ruamel-yaml==0.17.26",
]
mypy = [
    "mypy",
]
ruff = [
    "ruff",
]
shellcheck = [
    "shellcheck-py",
]
docs = [
    "mkdocs-material==9.1.0",
    "mkdocs-glightbox",
    "mkdocs-include-dir-to-nav",
    "mkdocs-static-i18n[material]"
]
bin = [
    "pyinstaller",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
    "templates",
]

# Same as Black.
line-length = 88
indent-width = 4
# Assume Python 3.14
target-version = "py314"
[lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
genesis_devtools = [
    "*.yaml",
    "*.md",
    "templates/**/*",
    "spec/**/*",
    "packer/**/*",
    "autocomplete/**/*",
]

[project.scripts]
genesis = "genesis_devtools.cmd.cli:genesis"

[project.entry-points."genesis_devtools.backup.drivers"]
LocalQcowBackuper = "genesis_devtools.backup.local:LocalQcowBackuper"
S3QcowBackuper = "genesis_devtools.backup.s3:S3QcowBackuper"

[project.entry-points."genesis_devtools.repo.drivers"]
fs = "genesis_devtools.repo.fs:FSRepoDriver"
nginx = "genesis_devtools.repo.nginx:NginxRepoDriver"

[tool.uv]
package = true

[tool.mypy]
exclude = [
    '.venv',
    'genesis_devtools/tests',
]
python_version = "3.14"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = [
    "genesis_devtools"
]
command_line = "-m pytest -s genesis_devtools/tests/unit"
omit = [
    "genesis_devtools/tests/*",
    ".venv",
    "memory:0x"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "cover"

[tool.coverage.xml]
output = "cover/coverage.xml"